# gen/grpc/term_limit/server/types.go
@@ -1,0 +1,31 @@
+// Code generated by goa v3.4.3, DO NOT EDIT.
+//
+// term_limit gRPC server types
+//
+// Command:
+// $ goa gen goa_starter/design
+
+package server
+
+import (
+	term_limitpb "goa_starter/gen/grpc/term_limit/pb"
+	termlimit "goa_starter/gen/term_limit"
+)
+
+// NewAddPayload builds the payload of the "add" endpoint of the "term_limit"
+// service from the gRPC request type.
+func NewAddPayload(message *term_limitpb.AddRequest) *termlimit.AddPayload {
+	v := &termlimit.AddPayload{
+		C: int(message.C),
+		D: int(message.D),
+	}
+	return v
+}
+
+// NewAddResponse builds the gRPC response type from the result of the "add"
+// endpoint of the "term_limit" service.
+func NewAddResponse(result int) *term_limitpb.AddResponse {
+	message := &term_limitpb.AddResponse{}
+	message.Field = int32(result)
+	return message
+}
