# gen/http/term_limit/server/types.go
@@ -1,0 +1,21 @@
+// Code generated by goa v3.4.3, DO NOT EDIT.
+//
+// term_limit HTTP server types
+//
+// Command:
+// $ goa gen goa_starter/design
+
+package server
+
+import (
+	termlimit "goa_starter/gen/term_limit"
+)
+
+// NewAddPayload builds a term_limit service add endpoint payload.
+func NewAddPayload(c2 int, d int) *termlimit.AddPayload {
+	v := &termlimit.AddPayload{}
+	v.C = c2
+	v.D = d
+
+	return v
+}
