# gen/term_limit/endpoints.go
@@ -1,0 +1,40 @@
+// Code generated by goa v3.4.3, DO NOT EDIT.
+//
+// term_limit endpoints
+//
+// Command:
+// $ goa gen goa_starter/design
+
+package termlimit
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Endpoints wraps the "term_limit" service endpoints.
+type Endpoints struct {
+	Add goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "term_limit" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	return &Endpoints{
+		Add: NewAddEndpoint(s),
+	}
+}
+
+// Use applies the given middleware to all the "term_limit" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.Add = m(e.Add)
+}
+
+// NewAddEndpoint returns an endpoint function that calls the method "add" of
+// service "term_limit".
+func NewAddEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req interface{}) (interface{}, error) {
+		p := req.(*AddPayload)
+		return s.Add(ctx, p)
+	}
+}
